fix icon misalignments

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -10,3 +10,8 @@
 div {
   outline: none;
 }
+
+.icon {
+  display: inline-flex;
+  vertical-align: middle;
+}
